# piped

./: .gitignore  pyproject.toml
example-things/: compiled.pipedc  example-file.txt  object.py
example-things/example1/: input.piped
ideas/: Changelog.g4  brain-storming.txt
parser/: Changelog.g4  Piped.g4  build_grammar.sh  generate_c.py  helper_classes.py  internal_objects.py  main.py  main_processing.py  master.py  module_scope.py  pygrun.py  test.piped  type_system.py  typing_.py  visitor_registors.py
parser/grammar_registry/: __init__.py  basic_stuff.py  core_parsing.py  post_parsing.py
